@@ -11,7 +11,6 @@ import com.powsybl.openloadflow.network.ElementType;
 import com.powsybl.openloadflow.network.LfBus;
 import com.powsybl.openloadflow.network.LfShunt;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -24,21 +23,21 @@ public class ShuntCompensatorReactiveFlowEquationTerm extends AbstractNamedEquat
 
     private final Variable<AcVariableType> vVar;
 
+    private Variable<AcVariableType> bVar = null;
+
     private final List<Variable<AcVariableType>> variables;
 
-    private final double b;
-
-    private double q;
-
-    private double dqdv;
-
-    public ShuntCompensatorReactiveFlowEquationTerm(LfShunt shunt, LfBus bus, VariableSet<AcVariableType> variableSet) {
+    public ShuntCompensatorReactiveFlowEquationTerm(LfShunt shunt, LfBus bus, VariableSet<AcVariableType> variableSet, boolean deriveB) {
         this.shunt = Objects.requireNonNull(shunt);
         Objects.requireNonNull(bus);
         Objects.requireNonNull(variableSet);
         vVar = variableSet.getVariable(bus.getNum(), AcVariableType.BUS_V);
-        variables = Collections.singletonList(vVar);
-        b = shunt.getB();
+        if (deriveB) {
+            bVar = variableSet.getVariable(shunt.getNum(), AcVariableType.SHUNT_B);
+            variables = List.of(vVar, bVar);
+        } else {
+            variables = List.of(vVar);
+        }
     }
 
     @Override
@@ -56,37 +55,41 @@ public class ShuntCompensatorReactiveFlowEquationTerm extends AbstractNamedEquat
         return variables;
     }
 
-    @Override
-    public void update(double[] x) {
-        Objects.requireNonNull(x);
-        double v = x[vVar.getRow()];
-        q = -b * v * v;
-        dqdv = -2 * b * v;
+    private double v() {
+        return stateVector.get(vVar.getRow());
+    }
+
+    private double b() {
+        return bVar != null ? stateVector.get(bVar.getRow()) : shunt.getB();
+    }
+
+    private double q() {
+        return  -b() * v() * v();
+    }
+
+    private double dqdv() {
+        return -2 * b() * v();
+    }
+
+    private double dqdb() {
+        return -v() * v();
     }
 
     @Override
     public double eval() {
-        return q;
+        return q();
     }
 
     @Override
     public double der(Variable<AcVariableType> variable) {
         Objects.requireNonNull(variable);
         if (variable.equals(vVar)) {
-            return dqdv;
+            return dqdv();
+        } else if (variable.equals(bVar)) {
+            return dqdb();
         } else {
             throw new IllegalStateException("Unknown variable: " + variable);
         }
-    }
-
-    @Override
-    public boolean hasRhs() {
-        return false;
-    }
-
-    @Override
-    public double rhs() {
-        return 0;
     }
 
     @Override
